[add] 优化项目结构，完善启动配置和过滤逻辑

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,8 +24,7 @@ if(NOT LIBNET_FOUND)
     string(REPLACE "\n" "" LIBNET_CFLAGS "${LIBNET_CFLAGS}")
     string(REPLACE "\n" "" LIBNET_LDFLAGS "${LIBNET_LDFLAGS}")
   else()
-    message("required libnet not found.")
-    return(-1)
+    message(FATAL_ERROR "required libnet not found.")
   endif()
 else()
   string(REPLACE ";" " " LIBNET_CFLAGS "${LIBNET_CFLAGS}")
